Refresh cyber security blog

--- a/blog-2.html
+++ b/blog-2.html
@@ -170,60 +170,60 @@ permalink: /blog-2/
                 <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
                 <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
                 <br>
-                <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website/">Fix My Site!</a>
+                <a class="btn-secondary" href="https://sybiltec.com/fix-slow-wordpress-website/">Fix My Site! >></a>
                 <div class="padding-top">
                     <h2>How to Install GA4 on Your WordPress Website</h2>
                     <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wordpress-website/">Install GA4 on WordPress</a>
+                    <a class="btn-secondary" href="https://sybiltec.com/install-ga4-wordpress-website/">Install GA4 on WordPress >></a>
                 </div>
                 <div class="padding-top">
                     <h2>How to Install GA4 on Your Wix Website</h2>
                     <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wix-website/">Install GA4 on Wix</a>
+                    <a class="btn-secondary" href="https://sybiltec.com/install-ga4-wix-website/">Install GA4 on Wix >></a>
                 </div>
                 <div class="padding-top">
                     <h2>How to Install GA4 on Your Shopify Website</h2>
                     <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-shopify-website/">Install GA4 on Shopify</a>
+                    <a class="btn-secondary" href="https://sybiltec.com/install-ga4-shopify-website/">Install GA4 on Shopify >></a>
                 </div>
                 <div class="padding-top">
                     <h2>How Do I Upgrade to Google Analytics 4?</h2>
                     <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The previous version, Universal Analytics, stopped processing new data on 1st July 2023, so you need to upgrade to GA4 if you have not yet done so. Not sure which version of Google …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4/">Upgrade GA Now</a>
+                    <a class="btn-secondary" href="https://sybiltec.com/upgrade-google-analytics-4/">Upgrade GA Now >></a>
                 </div>
                 <div class="padding-top">
                     <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
                     <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
                     <br>
-                <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce</a>
+                <a class="btn-secondary" href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce >></a>
                 </div>
                 <div class="padding-top">
                     <h2>The Web Design Process Explained in 12 Easy Steps</h2>
                     <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process</a>
+                    <a class="btn-secondary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process >></a>
                 </div>
                 <div class="padding-top">
                     <h2>A Guide to Updating Your WordPress Website</h2>
                     <p>If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">Update WordPress</a>
+                    <a class="btn-secondary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">Update WordPress >></a>
                 </div>
                 <div class="padding-top">
                     <h2>Are You Inadvertently Abusing Your Customers' Data?</h2>
                     <p>Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Use Data Appropriately</a>
+                    <a class="btn-secondary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Use Data Appropriately >></a>
                 </div>
                 <div class="padding-top">
                     <h2>The Importance of Contact Information on Your Website</h2>
                     <p>Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/importance-of-contact-information-on-your-website/">Review Your Contact Info</a>
+                    <a class="btn-secondary" href="https://sybiltec.com/importance-of-contact-information-on-your-website/">Review Your Contact Info >></a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog/">Page 1</a> | <a href="https://sybiltec.com/blog-3/">Page 3</a></div>
             </div>
