--- a/index.html
+++ b/index.html
@@ -265,7 +265,20 @@
                     <p>Read our selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row">
-                    <div class="col-4">  
+                    <div class="col-4">          
+                        <div class="blog-card">
+                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business"><img src="images/person-holding-black-iphone-5-400x209.jpg" alt="Person holding black iphone 5"></a>  
+                            <div class="blog-card-text">               
+                                <a href="https://sybiltec.com/cyber-security-best-practices-for-business" class="blog-title">Cyber Security Best Practices</a>
+                                <p>19 May 2024</p>
+                                <p>Cyber security is a top priority for every business. Read our blog for tip and advice on how to keep your organisation protected against cyber crime.</p>
+                                <div class="padding-top">
+                                    <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Secure my Business >></a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4"> 
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">
                                 <img src="https://sybiltec.com/images/white-and-blue-analogue-tachometer-gauge.jpg" 
@@ -289,20 +302,6 @@
                                 <p>Good user experience is paramount to your website's success. Read the article for tips on how to improve your website's UX.</p>
                                 <div class="padding-top">
                                     <a class="btn-secondary" href="https://sybiltec.com/user-experience-ux/">Improve My UX >></a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">          
-                        <div class="blog-card">
-                            <a href="https://sybiltec.com/accessible-website-design/"><img src="https://sybiltec.com/images/disabled-parking-350x183.jpg" 
-                                alt="Disabled parking"></a>  
-                            <div class="blog-card-text">               
-                                <a href="https://sybiltec.com/accessible-website-design/" class="blog-title">Accessible Website Design</a>
-                                <p>10 March 2024</p>
-                                <p>Read the article for an introduction to accessibility and quick tips on how to create a website that caters to users with impairments and disabilities.</p>
-                                <div class="padding-top">
-                                    <a class="btn-secondary" href="https://sybiltec.com/accessible-website-design/">Accessible Design >></a>   
                                 </div>
                             </div>
                         </div>
