--- a/blog-3.html
+++ b/blog-3.html
@@ -170,30 +170,24 @@ permalink: /blog-3/
                     <h2>How Does a Good Website Showcase Trust?</h2>
                     <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
                     <br>
-                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">Create a Trustworthy Website</a>
-                <div class="padding-top">
-                    <h2>Cyber Security Best Practices for You and Your Business</h2>
-                    <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. Click on any image a to view a larger version. …</p>
-                    <br>
-                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Cyber Security Practices</a>
-                </div>
+                    <a class="btn-secondary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">Create a Trustworthy Website >></a>
                 <div class="padding-top">
                     <h2>7 Reasons Why You Should be Using Shopify</h2>
                     <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify/">Use Shopify Now</a>
+                        <a class="btn-secondary" href="https://sybiltec.com/6-reasons-to-use-shopify/">Use Shopify Now >></a>
                 </div>
                 <div class="padding-top">
                     <h2>5 Best Tools for Remote Working</h2>
                     <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free. Of course, I can't go into …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/5-best-tools-for-remote-working/">Remote Working Tools</a>
+                        <a class="btn-secondary" href="https://sybiltec.com/5-best-tools-for-remote-working/">Remote Working Tools >></a>
                 </div>
                 <div class="padding-top padding-bottom">
                     <h2>6 Tips for Surviving Remote Working</h2>
                     <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively. Optimise Your Technology Get a reliable internet connection. If possible, use an …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Survive Remote Working</a>
+                        <a class="btn-secondary" href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Survive Remote Working >></a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2/">Page 2</a></div>
             </div>
