Corrections to cyber security blog

--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -198,7 +198,7 @@ permalink: /cyber-security-best-practices-for-business/
 
                 <p>Install an antivirus product on your devices and keep it up to date. Carry out a virus scan regularly to detect and remove any malicious software.</p>
 
-                <p>Keep all of your devices' operating system software up to date. By default, devices are usually set to download and install the updates automatically. However, if this will be disruptive to your working day, add an appointment to your calendar to remind yourself to manually install the updates at a more convenient time.</p>
+                <p>Keep all of your devices' operating system software up to date. By default, devices are usually set to download and install the updates automatically. However, if this will be disruptive to your working day, add a recurring appointment to your calendar to remind yourself to manually install the updates at a more convenient time.</p>
 
                 <p>Only download apps and software from legitimate sources and always install the latest version.</p>
 
@@ -210,11 +210,11 @@ permalink: /cyber-security-best-practices-for-business/
 
                 <p>For each account, create a strong, unique password. A strong password is at least 16 characters long, consisting of a random combination of uppercase and lowercase letters, numbers and special characters (such as @, #, _, -, &, *, ^). For some interesting stats, download the famous <a href="https://www.hivesystems.com/password-table" target="_blank" rel="noopener noreferrer">Hive Systems Password Table</a> which illustrates how long it takes for a hacker to brute force a password in 2024.</p>
 
+                <h3>2-Factor Authentication</h3>
+
                 <p>Where possible, set up 2-factor authentication, or 2FA (also known as two-step verification). This adds an extra layer of security to your account because the access requires 2 forms of identification (the password and a security code). Common forms of 2FA include SMS verification, which involves sending a text message to your phone containing a unique security code, or obtaining a code via an authentication app. As well as your password, you would need to enter this code into the website to gain access to your account. Never share your security code with others.</p>
 
                 <p>When setting up 2FA, you should also create a backup method to access your account if you lose your phone. This is usually in the format of a recovery code. Please store your recovery codes in a safe place such as in a password manager.</p>
-
-                <p>Do not share login information with others.</p>
 
                 <h2>3. Manage Permissions Wisely</h2>
 
@@ -238,6 +238,8 @@ permalink: /cyber-security-best-practices-for-business/
                     <li>IDrive</li>
                     <li>MEGA</li>
                 </ul>
+
+                <h3>Managing Data Breaches</h3>
 
                 <p>Have an incident response procedure in place and in the event of an incident, record as much information as you can about it (what happened and when, why it happened, who was involved, what data was lost, which action you took etc.).</p>
 
@@ -295,9 +297,11 @@ permalink: /cyber-security-best-practices-for-business/
 
                 <img src="https://sybiltec.com/images/cybersecurity/vehicle-enquiry-service-gov-uk-website.png" alt="Vehicle enquiry service on gov.uk website" style="width: 500px; max-width: 100%;">
 
-                <p>Do not enter sensitive data (e.g. contact information or credit card details) on insecure websites. To check if a website is secure, look at the address bar of the browser. The web address should begin with <strong>https://</strong> and display a padlock symbol next to it.</p>
+                <p>Do not enter sensitive data (e.g. contact information or credit card details) on insecure websites. To check if a website is secure, look at the address bar of the browser. The web address should begin with <strong>https://</strong>.</p>
 
                 <p>Use common sense when shopping online. If prices look too good to be true, proceed with caution!</p>
+
+                <h3>Working Away From Your Usual Location</h3>
 
                 <p>When away from home or your usual workplace, do not connect to public wi-fi networks. These networks are usually unsecured and do not require a password to be accessed. Instead, use a VPN (virtual private network). A VPN provides an extra layer of security by hiding your IP address and sending/receiving data through an encrypted "tunnel", so you can browse the Internet securely and anonymously. Consider choosing a service such as NordVPN.</p>
 
@@ -307,19 +311,21 @@ permalink: /cyber-security-best-practices-for-business/
                 
                 <h2>8. Ensure That Your Website is Secure</h2>
 
-                <p>If you manage your own website, install an SSL (Secure Sockets Layer) certificate on your website. When a website has an SSL certificate enabled, the web address will begin with <em>https://</em> rather than <em>http://</em>, and the browser will display a padlock icon in the address bar. A secure website builds trust and reassures your customers that their data is safe on your website.</p>
+                <p>If you manage your own website, install an SSL (Secure Sockets Layer) certificate on your website. When a website has an SSL certificate enabled, the web address will begin with <em>https://</em> rather than <em>http://</em>, and the browser may also display a padlock icon in the address bar. A secure website builds trust and reassures your customers that their data is safe on your website.</p>
 
                 <p>Most website builders provide an SSL certificate for free, so you would not normally have to worry about this. However, if you are using WordPress or another content management system that does not provide one, you can obtain a free SSL certificate from Let's Encrypt or purchase one from your domain provider.</p>
 
-                <p>Additional tasks for WordPress users: make sure to update your plugins, themes and core WordPress files often (I recommend checking once a week). Updating your WordPress site helps to keep it protected against security threats and vulnerabilities. We've written this handy guide on <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">how to update your WordPress website</a> the right way.</p>
+                <h3>Additional Tasks for WordPress Users</h3>
+
+                <p>Make sure to update your plugins, themes and core WordPress files often (we recommend checking once a week). Updating your WordPress site helps to keep it protected against security threats and vulnerabilities. Read our handy guide on <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">how to update your WordPress website</a> the right way.</p>
 
                 <h2>9. Monitor Your Login Activity </h2>
 
-                <p>How do you know if someone has tried to gain access to one of your accounts? Perhaps a colleague has told you that they received an email or invoice from you that you were totally unaware of!</p>
+                <p>Perhaps a colleague has told you that they received an email or invoice from you that you were totally unaware of! How would you know if someone has tried to gain access to one of your accounts?</p>
 
-                <p>Many platforms include a feature that lets you track any suspicious behaviour; here is an example. If you are using Microsoft, you can go into <em>My Microsoft account</em> > <em>Security</em> > <em>View my activity</em> (below "Sign-in activity"). I recently tried this and was shocked to find out the number of times someone had tried to gain unauthorised access to my account, but fortunately, none of the suspicious logins were successful. </p>
+                <p>Many platforms include a feature that lets you track any suspicious behaviour; here is an example. If you are using Microsoft, you can go into <em>My Microsoft account</em> > <em>Security</em> > <em>View my activity</em> (below "Sign-in activity"). I recently tried this and was shocked to find out how many times someone had tried to gain unauthorised access to my account, but fortunately, none of the suspicious logins were successful. </p>
 
-                <img src="images/cybersecurity/microsoft-sign-in-activity.png" class="screenshot" alt="Microsoft sign-in activity" style="width: 500px; max-width: 100%;">
+                <img src="https://sybiltec.com/images/cybersecurity/microsoft-sign-in-activity.png" class="screenshot" alt="Microsoft sign-in activity" style="width: 500px; max-width: 100%;">
 
                 <p>It's recommended to add additional email addresses or phone numbers to your Microsoft account. If Microsoft detects a suspicious (and successful) login on your account, you would receive an email notification or text with instructions on how to proceed. Changing your password would usually be the first thing to do. However, if you do receive such a notification, please ensure that it is genuinely from Microsoft - we have known scammers to spoof these "<a href="#unusual">Unusual sign-in activity</a>" emails too, as described earlier in this article.</p>
 
@@ -340,6 +346,8 @@ permalink: /cyber-security-best-practices-for-business/
                 <p>Last, but not least, we recommend getting Cyber Essentials Certified. Cyber Essentials is a government-backed scheme which was developed in response to the growing problem of cyber crime. Getting certified demonstrates your commitment to cyber security best practices and gives you peace of mind that your organisation is protected from the most common cyber threats. The certification is available at two levels (Cyber Essentials and Cyber Essentials Plus). Once you have received the certification, you will receive a badge to be displayed on your website and other documents.</p>
 
                 <p>Our partners, <a href="https://thegdprcomplianceconsultancy.co.uk/" target="_blank" rel="noopener noreferrer">The GDPR Compliance Consultancy</a>, can help you through the process of getting certified with ease.</p>
+
+                <img class="screenshot" src="https://sybiltec.com/images/cybersecurity/cyber-essentials.png" alt="Cyber Essentials">
 
             </div>
         </div>
