--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
                 <div class="row">
                     <div class="col-4">          
                         <div class="blog-card">
-                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business"><img src="images/person-holding-black-iphone-5-400x209.jpg" alt="Person holding black iphone 5"></a>  
+                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business/"><img src="images/person-holding-black-iphone-5-400x209.jpg" alt="Person holding black iPhone 5"></a>  
                             <div class="blog-card-text">               
-                                <a href="https://sybiltec.com/cyber-security-best-practices-for-business" class="blog-title">Cyber Security Best Practices</a>
+                                <a href="https://sybiltec.com/cyber-security-best-practices-for-business/" class="blog-title">Cyber Security Best Practices</a>
                                 <p>19 May 2024</p>
-                                <p>Cyber security is a top priority for every business. Read our blog for tip and advice on how to keep your organisation protected against cyber crime.</p>
+                                <p>Cyber security is a top priority for every business. Read our blog for guidance on how to keep your organisation protected against cyber crime.</p>
                                 <div class="padding-top">
-                                    <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Secure my Business >></a>   
+                                    <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Secure my Business >></a>   
                                 </div>
                             </div>
                         </div>
