Make contact into a button

--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -162,7 +162,7 @@ permalink: /install-ga4-wordpress-website/
                                         <a href="https://sybiltec.com/clients/">Clients</a>
                                         <a href="https://sybiltec.com/faqs/">FAQs</a>
                                         <a href="https://sybiltec.com/blog/">Blog</a>
-                                        <a href="https://sybiltec.com/contact/">Contact</a>
+                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
