--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -162,7 +162,7 @@ permalink: /6-reasons-to-use-shopify/
                                         <a href="https://sybiltec.com/clients/">Clients</a>
                                         <a href="https://sybiltec.com/faqs/">FAQs</a>
                                         <a href="https://sybiltec.com/blog/">Blog</a>
-                                        <a href="https://sybiltec.com/contact/">Contact</a>
+                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
