--- a/leaflet-design.html
+++ b/leaflet-design.html
@@ -140,7 +140,7 @@ permalink: /leaflet-design/
                                         <a href="https://sybiltec.com/clients/">Clients</a>
                                         <a href="https://sybiltec.com/faqs/">FAQs</a>
                                         <a href="https://sybiltec.com/blog/">Blog</a>
-                                        <a href="https://sybiltec.com/contact/">Contact</a>
+                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
