--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -208,7 +208,7 @@ permalink: /web-design-surrey/
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">                         
+                            <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre, Woodham, Surrey">                         
                         </div>
                         <div class="col-7">
                             <h2>New Haw Community Centre, Woodham</h2>
@@ -222,7 +222,31 @@ permalink: /web-design-surrey/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
-                                target="_blank" rel="noopener noreferrer">View New Haw Community Centre</a>
+                                target="_blank" rel="noopener noreferrer">View New Haw Community Centre >></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="crazy-thumbs" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
+                        </div>
+                        <div class="col-7">
+                            <h2>Crazy Thumbs</h2>
+                            <h3 style="font-size: 18px;">Specialising in vintage video games and equipment as well as contemporary titles and trade-ins</h3>
+                            <ul>
+                                <li>Shopify store development</li>
+                                <li>Advanced navigation system</li>
+                                <li>Sound effects</li>
+                                <li>Embedded Twitch videos</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://crazythumbs.co.uk/" 
+                                target="_blank" rel="noopener noreferrer">View Crazy Thumbs >></a>
                             </div>
                         </div>
                     </div>
@@ -247,7 +271,7 @@ permalink: /web-design-surrey/
                             </ul>        
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk"
-                                target="_blank" rel="noopener noreferrer">View The GDPR Compliance Consultancy</a>
+                                target="_blank" rel="noopener noreferrer">View The GDPR Compliance Consultancy >></a>
                             </div>
                         </div>
                     </div>
