--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -4,7 +4,7 @@ permalink: /web-design-bexley/
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://sybiltec.com/fontawesome/js/029ff40d7b.js"></script>
+        <script src="https://kit.fontawesome.com/029ff40d7b.js" crossorigin="anonymous"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
@@ -510,8 +510,8 @@ permalink: /web-design-bexley/
                                 <i class="fa-brands fa-pinterest"></i></a>
 			                <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-facebook"></i></a>
-                            <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-youtube"></i></a>
+                            <a href="https://x.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                                <i class="fa-brands fa-x-twitter"></i></a>
                         </p>
                         <p>
                             <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
