Add alt tags in index.html

--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
             <div class="row">
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="images/zitka-stone.png" class="avatar">
+                        <img src="images/zitka-stone.png" class="avatar" alt="Zitka Stone">
                         <p><strong><em>Zita Stone, NeroWireArt</em></strong></p>
                         <p>Outstanding support and ongoing experience of working with Sybil @Sybiltec. Her suggestions on the design, comms management and assistance with any problem resolution have been second to none. Amazing service, thank you!</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="images/gary-parker.png" class="avatar">
+                        <img src="images/gary-parker.png" class="avatar" alt="Gary Parker">
                         <p><strong><em>Gary Parker, Managing Director, CNT Associates</em></strong></p>
                         <p>Sybil is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon free and understandable. Her work is of a high quality and she is able to work both as part of a team and on her own initiative.</p>
                     </div>
@@ -240,14 +240,14 @@
             <div class="row">
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="images/hany-abdelkhalek.png" class="avatar">
+                        <img src="images/hany-abdelkhalek.png" class="avatar" alt="Hany Abdelkhalek">
                         <p><strong><em>Hany Abdelkhalek</em></strong></p>
                         <p>Sybil is a highly skilled developer whom I had the pleasure of working with on a small landing pages project. I would highly recommend Sybil to anyone in need of a professional-looking website, especially if they're unsure where to begin.</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="images/aurore-lacabe.png" class="avatar">
+                        <img src="images/aurore-lacabe.png" class="avatar" alt="Aurore Lacabe">
                         <p><strong><em>Aurore Lacabe, Voice Teacher</em></strong></p>
                         <p>Sybil was reliable and really supportive throughout the making of my website. I am really happy with the final result and would wholeheartedly recommend Sybil to anyone who needs a website and wants it to have a professional look.</p>
                     </div>
