--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                     <div class="col-4"></div>
                     <div class="col-4"><i class="fa-solid fa-medal"></i><h3>Demonstrable Track Record</h3>
                         <p>Over the last 4 years, we've worked with over 30 small businesses from within a range of industry sectors to improve their online presence.</p></div>
-                    <div class="col-4"><i class="fa-solid fa-earth-americas"></i><h3>International Coverage</h3>
-                        <p>Is your business based outside of the UK? No problem - we have successfully worked with several international customers.</p></div>
+                    <div class="col-4"><i class="fa-solid fa-earth-americas"></i><h3>International Presence</h3>
+                        <p>Is your business based outside of the UK? No problem - we have successfully worked with several customers around the globe.</p></div>
                 </div>
             </div>
         </div>
@@ -315,7 +315,7 @@
         </div>
         <div class="partners section center grey">
             <div class="container-1140">
-                <h2>Who We Work With</h2>
+                <h2>Who We Partner With</h2>
                 <hr>
                 <div class="row">
                     <div class="col-2">
