Update partner logos

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="images/zitka-stone.png" class="avatar" alt="Zitka Stone">
+                        <img src="images/zitka-stone.png" class="avatar" alt="Zita Stone">
                         <p><strong><em>Zita Stone, NeroWireArt</em></strong></p>
                         <p>Outstanding support and ongoing experience of working with Sybil @Sybiltec. Her suggestions on the design, comms management and assistance with any problem resolution have been second to none. Amazing service, thank you!</p>
                     </div>
@@ -273,7 +273,7 @@
                                 <p>19 May 2024</p>
                                 <p>Cyber security is a top priority for every business. Read our blog for guidance on how to keep your organisation protected against cyber crime.</p>
                                 <div class="padding-top">
-                                    <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Secure my Business >></a>   
+                                    <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Secure My Business >></a>   
                                 </div>
                             </div>
                         </div>
@@ -315,27 +315,33 @@
         </div>
         <div class="partners section center grey">
             <div class="container-1140">
-                <h2>Who We Partner With</h2>
+                <h2>Whom We Partner With</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-2">
-                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="https://sybiltec.com/images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
-                    </div>
-                    <div class="col-2">
-                        <img src="https://sybiltec.com/images/logos/low-res/shopify-partners.webp" alt="Shopify Partners">
-                    </div>
-                    <div class="col-2">
-                        <img src="https://sybiltec.com/images/logos/low-res/wix.webp" alt="Wix">
-                    </div>
-                    <div class="col-2">
-                        <img src="https://sybiltec.com/images/logos/low-res/wordpress.webp" alt="WordPress">
-                    </div>
-                    <div class="col-2">
+                    <div class="col-1-5">
                         <img src="https://sybiltec.com/images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates Ltd">
                     </div>
-                    <div class="col-2">
-                        <img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.webp" alt="Emrys">
+                    <div class="col-1-5">
+                        <img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.webp" alt="Emrys Technology and Consultancy">
                     </div>
+                    <div class="col-1-5">
+                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="https://sybiltec.com/images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
+                    </div>
+                    <div class="col-1-5">
+                        <img src="images/logos/low-res/learndash.webp" alt="LearnDash">
+                    </div>
+                    <div class="col-1-5">
+                        <img src="https://sybiltec.com/images/logos/low-res/shopify-partners.webp" alt="Shopify Partners">
+                    </div> 
+                    <div class="col-1-5">
+                        <img src="https://sybiltec.com/images/logos/low-res/wix.webp" alt="Wix">
+                    </div>
+                    <div class="col-1-5">
+                        <img src="images/logos/low-res/woocommerce.webp" alt="WooCommerce">
+                    </div>
+                    <div class="col-1-5">
+                        <img src="https://sybiltec.com/images/logos/low-res/wordpress.webp" alt="WordPress">
+                    </div>  
                 </div>
             </div>
         </div>
