Add website compliance blog

--- a/are-you-inadvertently-abusing-your-customers-data.html
+++ b/are-you-inadvertently-abusing-your-customers-data.html
@@ -203,6 +203,8 @@ permalink: /are-you-inadvertently-abusing-your-customers-data/
                     <li>It informs your customers about how you use their data, building trust and helping them to make informed decisions when using your website.</li>
                 </ol>
 
+                <p>It is also required by law, under the UK GDPR (General Data Protection Regulation).</p>
+
                 <p>When writing a privacy notice it may be helpful to ask yourself some questions. Here are a few to get you started:</p>
 
                 <h2>WHICH data are you collecting?</h2>
