--- a/index.html
+++ b/index.html
@@ -265,6 +265,19 @@
                     <p>Read our selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">  
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/website-compliance-quick-guide/"><img src="https://sybiltec.com/images/wooden-gavel-sitting-on-computer-keyboard.jpg" alt="Wooden gavel sitting on computer keyboard"></a>
+                                <div class="blog-card-text">                      
+                                <a href="https://sybiltec.com/website-compliance-quick-guide/" class="blog-title">A Quick Guide to Website Compliance</a>
+                                <p>05 June 2024</p>
+                                <p>What is website compliance? Read our quick guide to find out what is legally required on your website.</p>
+                                <div class="padding-top">
+                                    <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Website Compliance >></a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">          
                         <div class="blog-card">
                             <a href="https://sybiltec.com/cyber-security-best-practices-for-business/"><img src="images/person-holding-black-iphone-5-400x209.jpg" alt="Person holding black iPhone 5"></a>  
@@ -289,19 +302,6 @@
                                 <p>Are you suffering from a slow PC? Read our latest post on how to make your computer or laptop run faster.</p>
                                 <div class="padding-top">
                                     <a class="btn-secondary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">Speed Up My PC! >></a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">  
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/user-experience-ux/"><img src="https://sybiltec.com/images/white-and-black-laptop-400x209.jpg" alt="White and black laptop"></a>
-                                <div class="blog-card-text">                      
-                                <a href="https://sybiltec.com/user-experience-ux/" class="blog-title">How to Improve the User Experience of Your Website</a>
-                                <p>20 March 2024</p>
-                                <p>Good user experience is paramount to your website's success. Read the article for tips on how to improve your website's UX.</p>
-                                <div class="padding-top">
-                                    <a class="btn-secondary" href="https://sybiltec.com/user-experience-ux/">Improve My UX >></a>   
                                 </div>
                             </div>
                         </div>
