--- a/sitemap.html
+++ b/sitemap.html
@@ -203,6 +203,7 @@ permalink: /sitemap/
                     <li><a href="https://sybiltec.com/fix-slow-wordpress-website/">10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</a></li>
                     <li><a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a></li>
                     <li><a href="https://sybiltec.com/accessible-website-design/">Accessible Design: Creating an Inclusive Website</a></li>
+                    <li><a href="https://sybiltec.com/website-compliance-quick-guide/">A Quick Guide to Website Compliance</a></li>
                     <li><a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Are You Inadvertently Abusing Your Customers' Data?</a></li>
                     <li><a href="https://sybiltec.com/cyber-security-best-practices-for-business/">Cyber Security Best Practices for You and Your Business</a></li>
                     <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">How Does a Good Website Showcase Trust?</a></li>
